# OpenCV-Face_Detect

./: .gitignore  Dockerfile  README.md  _check_syntax.py  app.py  cleanup_log.txt  pyproject.toml  refactor_log.txt  requirements.txt
demo_assets/: veo_demo_legacy.json
examples/: face_comparison.py  face_detection_webcam.py  image_processing.py
opencv_toolkit/: __init__.py
opencv_toolkit/face/: __init__.py  comparator.py  detector.py
opencv_toolkit/image/: __init__.py  color_remover.py  enhancer.py  line_detector.py  skew_corrector.py  stamp_detector.py
